--- a/sass/components/_company-list-block.sass
+++ b/sass/components/_company-list-block.sass
@@ -65,6 +65,10 @@
         figure, h3
           display: inline-block
           vertical-align: middle
+        h3
+          width: calc(100% - 11rem)
+          white-space: normal
+          line-height: 1
         figure
           width: 7em
         h3
